--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -46,7 +46,7 @@
   "editor.rulers": [80, 100, 120],
   "workbench.preferredDarkColorTheme": "GitHub Dark",
   "window.systemColorTheme": "auto",
-  "workbench.iconTheme": "vs-minimal",
+  "workbench.iconTheme": "material-icon-theme",
   "python.defaultInterpreterPath": "/Users/nhaja/miniconda/bin/python",
   "cmake.pinnedCommands": ["workbench.action.tasks.configureTaskRunner", "workbench.action.tasks.runTask"],
   "cmake.showOptionsMovedNotification": false,
@@ -57,13 +57,8 @@
   "vim.useSystemClipboard": true,
   "vim.hlsearch": true,
   "vim.useCtrlKeys": true,
-  "vim.insertModeKeyBindings": [
-    {
-      "before": ["k", "j"],
-      "after": ["<ESC>"]
-    }
-  ],
   "editor.minimap.enabled": false,
   "obsidianmd.vaultPath": "~/Library/Mobile Documents/iCloud~md~obsidian/Documents/Notes",
-  "obsidian-md-vsc.defaultVaultPath": "~/Library/Mobile Documents/iCloud~md~obsidian/Documents/Notes"
+  "obsidian-md-vsc.defaultVaultPath": "~/Library/Mobile Documents/iCloud~md~obsidian/Documents/Notes",
+  "workbench.sideBar.location": "right"
 }
