vim mode not insert required to switch focus

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,7 +4,13 @@
   "matlab.matlabpath": "/Applications/MATLAB_R2021b.app/bin",
   "matlab.mlintpath": "/Applications/MATLAB_R2021b.app/bin/maci64",
   "[python]": {
-    "editor.formatOnType": true
+    "editor.formatOnType": true,
+    "editor.defaultFormatter": "ms-python.black-formatter",
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable",
+    "editor.codeActionsOnSave": {
+      "source.organizeImports": true
+    },
   },
   "workbench.colorTheme": "GitHub Dark",
   "editor.inlineSuggest.enabled": true,
@@ -24,7 +30,9 @@
   "cSpell.enableFiletypes": ["!python", "!typst"],
   "jupyter.askForKernelRestart": false,
   "[cpp]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "xaver.clang-format",
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable"
   },
   "C_Cpp.default.intelliSenseMode": "clang-arm64",
   "C_Cpp.intelliSenseEngineFallback": "enabled",
@@ -38,7 +46,7 @@
   "latex-workshop.latex.clean.subfolder.enabled": true,
   "github.copilot.editor.enableAutoCompletions": true,
   "explorer.confirmDragAndDrop": false,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "xaver.clang-format",
   "editor.formatOnSave": true,
   "prettier.printWidth": 110,
   "editor.formatOnPaste": true,
@@ -60,5 +68,17 @@
   "editor.minimap.enabled": false,
   "obsidianmd.vaultPath": "~/Library/Mobile Documents/iCloud~md~obsidian/Documents/Notes",
   "obsidian-md-vsc.defaultVaultPath": "~/Library/Mobile Documents/iCloud~md~obsidian/Documents/Notes",
-  "workbench.sideBar.location": "right"
+  "workbench.sideBar.location": "right",
+  "vim.camelCaseMotion.enable": true,
+  "editor.formatOnSaveMode": "modificationsIfAvailable",
+  "[cmake]": {
+    "editor.defaultFormatter": "twxs.cmake",
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features",
+    "editor.formatOnSave": true,
+    "editor.formatOnSaveMode": "modificationsIfAvailable"
+  }
 }
