--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1895,6 +1895,7 @@ map cmd+k
 map cmd+f 
 map cmd+r
 map cmd+l
+map ctrl+m discard_event
 #:     # completely ignore a keyboard event
 #:     map ctrl+alt+f1 discard_event
 #:     # combine multiple actions
