updated kitty settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1433,7 +1433,7 @@ background_opacity 0.95
 #: See rc_custom_auth <https://sw.kovidgoyal.net/kitty/remote-
 #: control/#rc-custom-auth> for details.
 
-# allow_remote_control no
+# allow_remote_control yes
 
 #: Allow other programs to control kitty. If you turn this on, other
 #: programs can control all aspects of kitty, including sending text
@@ -1792,7 +1792,7 @@ background_opacity 0.95
 #: Dock). Changing this option by reloading the config is not
 #: supported.
 
-# macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed yes
 
 #: Have kitty quit when all the top-level windows are closed on macOS.
 #: By default, kitty will stay running, even with no open windows, as
@@ -1895,7 +1895,8 @@ map cmd+k
 map cmd+f 
 map cmd+r
 map cmd+l
-map ctrl+m discard_event
+map cmd+n 
+map ctrl+m
 #:     # completely ignore a keyboard event
 #:     map ctrl+alt+f1 discard_event
 #:     # combine multiple actions
