--- a/tmux/github-theme.conf
+++ b/tmux/github-theme.conf
@@ -1,11 +1,11 @@
-bg="#24282d"
+bg="#24292e"
 default_fg="#e1e3e8" 
-session_fg="#7ee787"
-selection_bg="#22272e"
-selection_fg="#e1e3e8"
-active_pane_border="#57626f"
-active_window_fg="#7ee787"
-active_window_fg="#ffa657"
+session_fg="#3fb950"
+selection_bg="#58a6ff"
+selection_fg="#0d1117"
+active_pane_border="#707070"
+active_window_fg="#3fb950"
+active_window_fg="#ff7b72"
 
 set -g status-position top
 set -g status-left "#[fg=${session_fg},bold,bg=${bg}]  #S"
