--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,91 +1,24 @@
-# use zsh as default
+source-file ~/.config/tmux/tmux.reset.conf
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides ",xterm-256color:RGB"
 
-set -s user-keys[0] "CSI 57444 ; 9u"
-bind -n User0 send-keys D-
-
-# set -s extended-keys on
-# set -as terminal-features 'xterm*:extkeys'
-# set -as terminal-overrides ',xterm*:Tc'
-
-# set -g default-terminal "xterm-kitty"
-# set -as terminal-features ",xterm-kitty:RGB"
-# set -s extended-keys on
-# set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
-# set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
-# 
-# bind -n F12 send-keys "<D-"
-
-# set -s kitty-keys always
-# set -as terminal-features '*:kitkeys'
-
-# General
-set -g set-clipboard on         # use system clipboard
+set -g prefix C-b
+set -g base-index 1
 set -g detach-on-destroy off    # don't exit from tmux when closing a session
 set -g escape-time 0            # remove delay for exiting insert mode with ESC in Neovim
 set -g history-limit 1000000    # increase history size (from 2,000)
+set -g renumber-windows on      # renumber windows when a window is closed
+set -g set-clipboard on         # use system clipboard
 set -g mouse on                 # enable mouse support
 set -g status-interval 3        # update the status bar every 3 seconds
 set -gq allow-passthrough on     # Allow programs in the pane to bypass tmux (e.g. for image preview)
 set -g visual-activity off       # visual bell
-
 set -g default-terminal "${TERM}"
-# set new prefix key
-set -g prefix C-b
-unbind C-b
-bind-key C-b send-prefix
-
 set -g status-position top
+setw -g mode-keys vi
 
-# Split horizontally in CWD with \
-unbind %
-bind H split-window -v -c "#{pane_current_path}"
-
-# Split vertically in CWD with -
-unbind '"'
-bind V split-window -h -c "#{pane_current_path}"
-
-# New window in same path
-bind n new-window -c "#{pane_current_path}"
-
-# Switch between windows
-bind l next-window
-bind h previous-window
-
-# Refresh tmux config with r
-unbind r
-bind r source-file ~/.config/tmux/tmux.conf
-
-# Use vim arrow keys to resize
-bind -r Down resize-pane -D 5
-bind -r Up resize-pane -U 5
-bind -r Left resize-pane -R 5
-bind -r Right resize-pane -L 5
-
-# Use m key to maximize pane
-bind -r f resize-pane -Z
-
-# Enable vi mode to allow vim movements
-set-window-option -g mode-keys vi
-
-# Start selecting text with "v"
-bind-key -T copy-mode-vi 'v' send -X begin-selection 
-
-# Copy text with "y"
-bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "pbcopy"
-
-# Paste yanked text with "Prefix + P" ("Prefix + p" goes to previous window)
-bind P paste-buffer
- 
-# Don't exit copy mode when dragging with mouse
-unbind -T copy-mode-vi MouseDragEnd1Pane
-
-# Start windows and panes at 1, not 0
-set -g base-index 1
-set -g pane-base-index 1
-set-window-option -g pane-base-index 1
-set-option -g renumber-windows on
+# Load theme
+source-file ~/.config/tmux/github-theme.conf 
 
 # tpm plugin manager
 set -g @plugin 'tmux-plugins/tpm'
@@ -97,12 +30,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor' 
 
-# Load theme
-source-file ~/.config/tmux/github-theme.conf 
-
 # Window Name
-# set -g @tmux_window_name_shell "['bash', 'sh', 'zsh']"
-# set -g @tmux_window_name_dir_programs "['nvim', 'vim', 'vi', 'git']"
+set -g @tmux_window_name_shell "['bash', 'sh', 'zsh']"
+set -g @tmux_window_name_dir_programs "['nvim', 'vim', 'vi', 'git']"
 set -g @tmux_window_name_use_tilde "True"
 
 # Resurrect
@@ -111,7 +41,3 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-# NOTE:
-# - To apply theme changes: tmux kill-server && rm -rf /tmp/tmux-*
-# - To avoid overlap, disable the Mac shortcut to switch input sources with Ctrl+Space in `System settings > Keyboard Shortcuts > Input Sources`
