updated keymaps and colortheme

--- a/tmux/github-theme.conf
+++ b/tmux/github-theme.conf
@@ -1,10 +1,9 @@
-bg="#24292e"
+bg="#1d2124"
 default_fg="#e1e3e8" 
 session_fg="#3fb950"
 selection_bg="#58a6ff"
 selection_fg="#0d1117"
-active_pane_border="#707070"
-active_window_fg="#3fb950"
+active_pane_border="#d29922"
 active_window_fg="#ff7b72"
 
 set -g status-position top
@@ -14,11 +13,11 @@ set -g status-justify centre
 set -g status-left-length 200   # default: 10
 set -g status-right-length 200  # default: 10
 set-option -g status-style bg=${bg}
-set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
+set -g window-status-current-format "#[fg=${active_window_fg},bg=default]  #I:#W"
 set -g window-status-format "#[fg=${default_fg},bg=default] #I:#W"
 set -g window-status-last-style "fg=${default_fg},bg=default"
 set -g message-command-style bg=default,fg=${default_fg}
 set -g message-style bg=default,fg=${default_fg}
 set -g mode-style bg=${selection_bg},fg=${selection_fg}
-set -g pane-active-border-style "fg=${active_pane_border},bg=default"
-set -g pane-border-style 'fg=brightblack,bg=default'
+set -g pane-active-border-style "fg=${active_pane_border}"
+set -g pane-border-style "fg=${selection_fg}"
