--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -24,8 +24,16 @@ bind -r -T prefix - resize-pane -D 7
 bind -r -T prefix = resize-pane -U 7
 bind f resize-pane -Z
 bind : command-prompt
-bind c kill-pane
+bind q kill-pane
 bind x swap-pane -D
 bind S choose-session
 bind s list-sessions
+bind-key y copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -i -sel clip"
+bind-key -T copy-mode-vi C-u send-keys -X halfpage-up
+bind-key -T copy-mode-vi C-d send-keys -X halfpage-down
+bind-key -T copy-mode-vi h left
+bind-key -T copy-mode-vi j down
+bind-key -T copy-mode-vi k up
+bind-key -T copy-mode-vi l right
