--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -71,6 +71,10 @@ run = 'layout floating'
 if.app-name-regex-substring = 'whatsapp'
 run = 'layout floating'
 
+[[on-window-detected]]
+if.app-name-regex-substring = 'appcleaner'
+run = 'layout floating'
+
 # 'main' binding mode declaration
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
 # 'main' binding mode must be always presented
@@ -104,7 +108,6 @@ run = 'layout floating'
 alt-enter = 'fullscreen'
 alt-f = 'layout floating'
 alt-t = 'layout tiles'
-alt-w = 'close'
 
 ctrl-shift-h = 'join-with left'
 ctrl-shift-j = 'join-with down'
