--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,9 @@ source-file ~/.config/tmux/tmux.reset.conf
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
 
+set -s extended-keys on
+set -s terminal-overrides 'xterm-kitty:extkeys'
+
 set -g prefix C-b
 set -g base-index 1
 set -g detach-on-destroy off    # don't exit from tmux when closing a session
@@ -16,6 +19,7 @@ set -g visual-activity off       # visual bell
 set -g default-terminal "${TERM}"
 set -g status-position top
 setw -g mode-keys vi
+set -g default-shell "$SHELL"
 
 # Load theme
 source-file ~/.config/tmux/github-theme.conf 
@@ -25,15 +29,9 @@ set -g @plugin 'tmux-plugins/tpm'
 
 # List of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator' # enable navigating between nvim and tmux
-set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor' 
-
-# Window Name
-set -g @tmux_window_name_shell "['bash', 'sh', 'zsh']"
-set -g @tmux_window_name_dir_programs "['nvim', 'vim', 'vi', 'git']"
-set -g @tmux_window_name_use_tilde "True"
 
 # Resurrect
 set -g @resurrect-capture-pane-contents 'on'
