--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,6 +32,15 @@ set -g @plugin 'christoomey/vim-tmux-navigator' # enable navigating between nvim
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor' 
+set -g @plugin 'omerxx/tmux-floax'
+
+set -g @floax-width '80%'
+set -g @floax-height '80%'
+set -g @floax-border-style 'orange'
+set -g @floax-text-color 'blue'
+set -g @floax-bind 'f'
+set -g @floax-change-path 'true'
+
 
 # Resurrect
 set -g @resurrect-capture-pane-contents 'on'
