fixed vim search mode

--- a/tmux/tmux.reset.conf
+++ b/tmux/tmux.reset.conf
@@ -1,5 +1,6 @@
 # Remove all keybindings
-# unbind-key -a
+unbind-key -a
+unbind-key -n C-i
 
 bind X lock-server
 bind c new-window -c "$HOME"
@@ -26,9 +27,7 @@ bind f resize-pane -Z
 bind : command-prompt
 bind q kill-pane
 bind x swap-pane -D
-bind S choose-session
-bind s list-sessions
-bind-key y copy-mode
+bind-key v copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -i -sel clip"
 bind-key -T copy-mode-vi C-u send-keys -X halfpage-up
