--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,7 @@ source-file ~/.config/tmux/tmux.reset.conf
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
 
-set -s extended-keys on
+set-option -g extended-keys on
 set -s terminal-overrides 'xterm-kitty:extkeys'
 
 set -g prefix C-b
@@ -19,6 +19,8 @@ set -g visual-activity off       # visual bell
 set -g default-terminal "${TERM}"
 set -g status-position top
 setw -g mode-keys vi
+
+set -gu default-command
 set -g default-shell "$SHELL"
 
 # Load theme
@@ -33,6 +35,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after compu
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 set -g @plugin 'hendrikmi/tmux-cpu-mem-monitor' 
 set -g @plugin 'omerxx/tmux-floax'
+set -g @plugin 'omerxx/tmux-sessionx'
 
 set -g @floax-width '80%'
 set -g @floax-height '80%'
@@ -40,6 +43,8 @@ set -g @floax-border-style 'orange'
 set -g @floax-text-color 'blue'
 set -g @floax-bind 'f'
 set -g @floax-change-path 'true'
+
+set -g @sessionx-bind 'S'
 
 
 # Resurrect
